--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
