--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
     "next": "16.0.6",
